@@ -2869,11 +2869,17 @@ expects the output of a typical
 and parses the returned
 .BR -L ,
 .BR -l ,
+.BR -Wa ,
+.BR -Wl ,
+.BR -Wp ,
 .B -I
 and other options
 into the
 .BR LIBPATH ,
 .BR LIBS ,
+.BR ASFLAGS ,
+.BR LINKFLAGS ,
+.BR CPPFLAGS ,
 .B CPPPATH
 and
 .B CCFLAGS
